--- a/kidsbe/src/sass/_buttons.scss
+++ b/kidsbe/src/sass/_buttons.scss
@@ -44,6 +44,7 @@
 
 .burger{
     display: none;
+
     @media (max-width: 1200px) and (min-width:768px) {
         display: block;
         margin-left: 20px;
@@ -56,7 +57,9 @@
         height: 46.5px; 
         margin-left: 8.3px; 
     };
-    border: none;    
+    border: none;
+    z-index: 3;
+
     border-radius: 5px 30px 5px 15px;
     background-color: #FFCF3C;
     transition: all 0.3s;
