--- a/kidsbe/src/sass/_promo.scss
+++ b/kidsbe/src/sass/_promo.scss
@@ -18,17 +18,36 @@
             text-align: center;
             display: flex;
             justify-content: center;
+            padding: 0 15px 0 15px;
+
         };
     }
     &_descr{
         margin-top: 20px;
         width: 466px;
         z-index: 1;
+        .brbig375 {
+            display: none;
+          }
+        @media (min-width: 200px) and (max-width:767px) { 
+            .brbig375 {
+                display: block;
+              }
+            .br375 {
+                display: none;
+              }
+        };
+
+        
+
+
         @media (min-width: 200px) and (max-width:1199px) {
             width: auto;
             float: none;
             margin: 0 auto;
             text-align: center;
+            padding: 0 21px 0 21px;
+            
         };
     }
 
@@ -82,18 +101,27 @@
         @media (max-width: 767px) and (min-width: 200px) {
             flex-direction: column;
             justify-content: center;
+            width: 100%;
+            padding: 0 15px 0 15px;
+
         };
         &_item{
-            width: 272px;
             height: 69px;
             background-color: #fff;
             border-radius:15px;
             display: flex;
             align-items:center;
+
+            @media (min-width: 1200px)  {
+                width: 272px;
+            };
             @media (min-width: 768px) and (max-width:1199px) {
                 width: 359px;
                 margin-bottom: 11px;
-
+            };
+            @media (max-width: 767px) and (min-width: 200px) {
+                margin-top: 10px;
+                width: 100%;
             };
             &_img{
                 margin-left: 33px;
@@ -113,3 +141,5 @@
         }
     }
 }
+
+
