section books complite

--- a/kidsbe/src/sass/style.scss
+++ b/kidsbe/src/sass/style.scss
@@ -1,11 +1,12 @@
 *{
+    
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     
 }
 .wraper{
-    background-color: #F5F4FF;; 
+    background-color: #F5F4FF;
 }
 
 
@@ -77,6 +78,9 @@
         line-height: 24px;
     };
 }
+
+
+
 
 
 
