--- a/kidsbe/src/css/style.css
+++ b/kidsbe/src/css/style.css
@@ -448,9 +448,12 @@
         line-height: 20px; }
 
 .books {
+  background-color: #F5F4FF;
   margin: 0 auto;
   max-width: 1440px;
-  position: relative; }
+  position: relative;
+  margin-top: 92px;
+  height: 720px; }
   .books .books_left {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -462,22 +465,30 @@
     width: 50%;
     padding-left: 94px;
     float: right;
-    margin-top: 127px; }
+    margin-top: 127px;
+    z-index: 2; }
   .books_header {
+    position: relative;
     margin: 0 auto;
     width: 786px;
     height: 100px;
-    text-align: center; }
+    text-align: center;
+    z-index: 2; }
   .books_descr {
     display: inline-block;
     float: right;
     max-width: 504px;
+    z-index: 2;
     color: #2D2D2D;
     font-family: "Faber Sans Pro";
     font-size: 20px;
     font-style: normal;
     font-weight: 700;
     line-height: 30px; }
+    .books_descr_1 {
+      margin-bottom: 64px; }
+    .books_descr_2 {
+      margin-top: 53px; }
   .books_image_block {
     position: absolute;
     width: 739px;
@@ -522,6 +533,7 @@
     position: relative;
     width: 500px; }
     .books_advantages_item {
+      margin-right: 20px;
       display: inline-block;
       color: #6D698C;
       font-family: "Faber Sans Pro";
@@ -535,6 +547,129 @@
       padding: 19px 20px 0 26px;
       width: 219px;
       height: 166px; }
+
+.books_small {
+  margin: 0 auto;
+  position: relative;
+  height: auto;
+  max-width: 950px;
+  overflow: hidden; }
+  .books_small_header {
+    color: #2D2D2D;
+    text-align: center;
+    font-family: Directo;
+    font-size: 32px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 46px; }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .books_small_header {
+        font-size: 22px;
+        line-height: 32px;
+        /* 145.455% */ } }
+  .books_small_descr {
+    position: relative;
+    color: #2D2D2D;
+    text-align: center;
+    font-family: "Faber Sans Pro";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    max-width: 560px;
+    margin: 0 auto;
+    margin-top: 20px; }
+    .books_small_descr_2 {
+      display: inline;
+      position: absolute;
+      width: 560px;
+      bottom: 0;
+      -webkit-transform: translateX(50%);
+              transform: translateX(50%);
+      right: 50%;
+      margin-top: 29px; }
+      @media (max-width: 767px) and (min-width: 200px) {
+        .books_small_descr_2 {
+          font-size: 15px;
+          line-height: 24px;
+          /* 145.455% */
+          width: 340px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .books_small_descr {
+        font-size: 15px;
+        line-height: 24px;
+        /* 145.455% */ } }
+  .books_small_img {
+    position: absolute;
+    width: 468px;
+    height: 468px;
+    -webkit-transform: translateX(-150px) translateY(15px);
+            transform: translateX(-150px) translateY(15px); }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .books_small_img {
+        overflow: hidden;
+        width: 455px;
+        height: 455px;
+        margin: 0 auto;
+        top: 160px;
+        left: 50%;
+        -webkit-transform: translate(calc(-50% - 10px));
+                transform: translate(calc(-50% - 10px)); } }
+  .books_small_advantages {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    position: relative;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    width: 436px;
+    float: right;
+    margin-right: 5px;
+    margin-bottom: 20px;
+    margin-top: 46px; }
+    .books_small_advantages_item:nth-child(1), .books_small_advantages_item:nth-child(3) {
+      margin-right: 20px; }
+    .books_small_advantages_item:nth-child(1), .books_small_advantages_item:nth-child(2) {
+      margin-bottom: 20px; }
+    .books_small_advantages_item:last-child {
+      margin-bottom: 80px; }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .books_small_advantages {
+        margin-top: 388px;
+        float: none;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        width: 100%;
+        padding: 0 15px 0 15px; }
+        .books_small_advantages_item:nth-child(1), .books_small_advantages_item:nth-child(2) {
+          margin-bottom: 10px; }
+        .books_small_advantages_item:last-child {
+          margin-bottom: 80px; } }
+    .books_small_advantages_item {
+      display: inline-block;
+      color: #6D698C;
+      font-family: "Faber Sans Pro";
+      font-size: 14px;
+      font-style: normal;
+      font-weight: 400;
+      line-height: 22px;
+      background-color: #fff;
+      border-radius: 15px;
+      padding: 19px 20px 0 26px;
+      width: 208px;
+      height: 164px; }
+      @media (max-width: 767px) and (min-width: 200px) {
+        .books_small_advantages_item {
+          float: none;
+          -webkit-box-orient: vertical;
+          -webkit-box-direction: normal;
+              -ms-flex-direction: column;
+                  flex-direction: column;
+          width: 100%;
+          padding: 18px 26px 0 26px;
+          margin-bottom: 10px; } }
 
 .txt_header {
   font-family: Directo;
