--- a/kidsbe/src/sass/_books.scss
+++ b/kidsbe/src/sass/_books.scss
@@ -1,9 +1,11 @@
 .books{
 
-    
+    background-color: #F5F4FF;
     margin: 0 auto;
     max-width: 1440px;
     position: relative;
+    margin-top: 92px;
+    height: 720px;
     .books_left{
         display: flex;
         flex-direction: column;
@@ -11,18 +13,23 @@
         padding-left: 94px;
         float: right;
         margin-top: 127px;
+        z-index: 2;
         
     }
     &_header{
+        position: relative;
         margin: 0 auto;
         width: 786px;
         height: 100px;
         text-align: center;
+        z-index: 2;
+
     }
     &_descr{
         display: inline-block;
         float: right;
         max-width: 504px;
+        z-index: 2;
 
         color: #2D2D2D;
         font-family: "Faber Sans Pro";
@@ -30,6 +37,13 @@
         font-style: normal;
         font-weight: 700;
         line-height: 30px;
+        &_1{
+            margin-bottom: 64px;
+        }
+        &_2{
+            margin-top: 53px;
+        }
+        
     }
 
     &_image_block{
@@ -79,6 +93,8 @@
         position: relative;
         width: 500px;
         &_item{
+            margin-right: 20px;
+
             display: inline-block;
             color: #6D698C;
             font-family: "Faber Sans Pro";
@@ -95,4 +111,139 @@
             height: 166px;
         }
     }
+}
+
+
+.books_small{
+    margin: 0 auto;
+    position: relative;
+    height: auto;
+
+    max-width: 950px;
+    overflow: hidden;
+    &_header{
+        color: #2D2D2D;
+        text-align: center;
+        font-family: Directo;
+        font-size: 32px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 46px; 
+        @media (max-width: 767px) and (min-width: 200px) {
+            font-size: 22px;
+            line-height: 32px; /* 145.455% */
+        };
+    }
+    &_descr{
+        position: relative;
+        color: #2D2D2D;
+        text-align: center;
+        font-family: "Faber Sans Pro";
+        font-size: 20px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px; 
+        max-width: 560px;
+        margin: 0 auto;
+        margin-top: 20px;
+        &_2{
+            display: inline;
+            position: absolute;
+            width: 560px;
+            bottom: 0;
+            transform: translateX(50%);
+            right: 50%;
+            margin-top: 29px;
+            @media (max-width: 767px) and (min-width: 200px) {
+                // position: relative;
+                font-size: 15px;
+                line-height: 24px; /* 145.455% */
+                width: 340px;
+
+            };
+        }
+        @media (max-width: 767px) and (min-width: 200px) {
+            font-size: 15px;
+            line-height: 24px; /* 145.455% */
+        };
+
+    }
+    &_img{
+        position: absolute;
+        width: 468px;
+        height: 468px;
+        transform: translateX(-150px) translateY(15px);
+        @media (max-width: 767px) and (min-width: 200px) {
+                overflow: hidden;
+                width: 455px;
+                height: 455px;
+                margin: 0 auto;
+                // transform: translateX(150px) translateY(-15px);
+                top: 160px;
+                left: 50%;
+                transform: translate(calc(-50% - 10px), );
+
+
+
+        };
+        
+    }
+    &_advantages{
+        display: flex;
+        position: relative;
+        flex-wrap: wrap;
+        width: 436px;
+        float: right;
+        margin-right: 5px;
+        margin-bottom: 20px;
+        margin-top: 46px;
+        &_item:nth-child(1),
+        &_item:nth-child(3) {
+            margin-right: 20px;
+        }
+        &_item:nth-child(1),
+        &_item:nth-child(2) {
+            margin-bottom: 20px;
+        }
+        &_item:last-child{
+            margin-bottom: 80px;
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            margin-top: 388px;
+            float: none;
+            flex-direction: column;
+            width: 100%;
+            padding: 0 15px 0 15px;
+            &_item:nth-child(1),
+            &_item:nth-child(2) {
+            margin-bottom: 10px;
+            }
+            &_item:last-child{
+                margin-bottom: 80px;
+            };
+        };
+        &_item{
+            
+            display: inline-block;
+            color: #6D698C;
+            font-family: "Faber Sans Pro";
+            font-size: 14px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: 22px;
+            background-color: #fff;
+            border-radius: 15px;
+            padding: 19px 20px 0 26px;
+            width: 208px;
+            height: 164px;
+            @media (max-width: 767px) and (min-width: 200px) {
+                float: none;
+                flex-direction: column;
+                width: 100%;
+                padding: 18px 26px 0 26px;
+                margin-bottom: 10px;
+            };
+        }
+    }
+    
 }
