--- a/kidsbe/src/css/style.css
+++ b/kidsbe/src/css/style.css
@@ -671,6 +671,97 @@
           padding: 18px 26px 0 26px;
           margin-bottom: 10px; } }
 
+.advantages {
+  background-color: #F5F4FF;
+  padding-top: 93px; }
+  .advantages_header {
+    color: #2D2D2D;
+    text-align: center;
+    font-family: "Directo";
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 50px;
+    margin: 0 auto;
+    width: 1054px; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .advantages_header {
+        font-size: 32px;
+        line-height: 46px;
+        width: 738px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .advantages_header {
+        font-size: 22px;
+        line-height: 32px;
+        width: 345px; } }
+  .advantages_descr {
+    color: #6D698C;
+    text-align: center;
+    font-family: "Faber Sans Pro";
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    width: 738px;
+    margin: 0 auto;
+    margin-top: 24px; }
+    @media (min-width: 768px) and (max-width: 1199px) {
+      .advantages_descr {
+        margin-top: 20px;
+        width: 586px; } }
+    @media (max-width: 767px) and (min-width: 200px) {
+      .advantages_descr {
+        font-size: 15px;
+        line-height: 24px;
+        width: 345px;
+        margin-top: 20px; } }
+  .advantages_items {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-align: baseline;
+        -ms-flex-align: baseline;
+            align-items: baseline;
+    padding: 0;
+    max-width: 1440px;
+    margin: 0 auto; }
+    @media (min-width: 1200px) {
+      .advantages_items {
+        padding: 0 180px 0 180px; } }
+    .advantages_items_item {
+      display: block;
+      width: calc(100% / 3);
+      height: 250px;
+      margin-top: 50px;
+      padding: 0 15px 0 15px; }
+      @media (max-width: 1200px) {
+        .advantages_items_item {
+          width: calc(100% / 2);
+          /* по два в строку */ } }
+      .advantages_items_item_img {
+        display: block;
+        margin: 0 auto; }
+        @media (max-width: 767px) and (min-width: 200px) {
+          .advantages_items_item_img {
+            width: 60%;
+            height: 60%; } }
+      .advantages_items_item_text {
+        margin-top: 45px;
+        color: #6D698C;
+        text-align: center;
+        font-family: "Faber Sans Pro";
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: 24px; }
+        @media (max-width: 767px) and (min-width: 200px) {
+          .advantages_items_item_text {
+            font-size: 12px;
+            line-height: 18px;
+            margin-top: 20px; } }
+
 .txt_header {
   font-family: Directo;
   font-size: 46px;
