--- a/kidsbe/src/sass/style.scss
+++ b/kidsbe/src/sass/style.scss
@@ -7,6 +7,7 @@
 }
 .wraper{
     background-color: #F5F4FF;
+    height: 100%;
 }
 
 
@@ -15,6 +16,10 @@
 @import 'promo';
 @import 'books';
 @import 'advantages';
+@import 'kids';
+@import 'forms';
+
+
 
 
 
