--- a/kidsbe/src/sass/_advantages.scss
+++ b/kidsbe/src/sass/_advantages.scss
@@ -9,6 +9,7 @@
 .advantages{
     background-color: #F5F4FF;
     padding-top: 93px;
+    overflow: visible;
     &_header{
         color: #2D2D2D;
         text-align: center;
