--- a/kidsbe/src/sass/_promo.scss
+++ b/kidsbe/src/sass/_promo.scss
@@ -111,6 +111,13 @@
                 margin-left: 38px;
             }
             &_input{
+                margin-left: 14px;
+                color: #6D698C;
+                font-family: "Faber Sans Pro";
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 30px;
                 background-color: #E8E5FB;
                 border:none;
                 outline: none;
