--- a/kidsbe/src/sass/style.scss
+++ b/kidsbe/src/sass/style.scss
@@ -18,6 +18,17 @@
 @import 'advantages';
 @import 'kids';
 @import 'forms';
+@import 'benefits';
+@import 'instructions';
+@import 'lion';
+@import 'potential';
+@import 'optimal';
+@import 'footer';
+
+
+
+
+
 
 
 
