--- a/kidsbe/src/sass/_forms.scss
+++ b/kidsbe/src/sass/_forms.scss
@@ -1,9 +1,3 @@
-@media (min-width: 768px) and (max-width:1199px) {
-    
-};
-@media (max-width: 767px) and (min-width: 200px) {
-    
-};
 
 
 
@@ -15,16 +9,27 @@
     z-index: 1;
     overflow: hidden;
     &_2{
+        margin-top: 66px;
         background-color: #32B47A;
+        @media (min-width: 768px) and (max-width:1199px) {
+            margin-top: 54px;
+        };
+        @media (max-width: 767px) and (min-width: 200px) {
+            margin-top: 50px;
+            
+        };
     }
     &_3{
         background-color: #EF6A62;
+        margin-top: 103px;
     }
     @media (min-width: 768px) and (max-width:1199px) {
       height: 601px;  
+      margin-top: 65px;
     };
     @media (max-width: 767px) and (min-width: 200px) {
         height: 529px;
+        margin-top: 54px;
     };
     &_container{
         position: relative;
@@ -100,6 +105,12 @@
     &_forms{
         display: flex;
         flex-direction: row;
+        color: #B7B4D3;
+        font-family: "Faber Sans Pro";
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 30px;
         // align-items:center;
         @media (min-width: 768px) and (max-width:1199px) {
             display: flex;
